src/objects/Disciplinary_Action__c.object
<CustomObject>
    <description>Represents actions taken in response to student disciplinary incidents</description>
    <fields>
        <fullName>Discipline_End_Date__c</fullName>
        <description>The date the the disciplinary action ends</description>
        <label>Discipline End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discipline_Length__c</fullName>
        <description>The length of time in which this discipline is in place, used in combination with the Length Unit picklist.</description>
        <label>Discipline Length</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discipline_Start_Date__c</fullName>
        <description>The date the disciplinary action begins</description>
        <label>Discipline Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incident_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the record that ties a student/contact to an incident so the actions can be tracked.</description>
        <label>Incident Party</label>
        <referenceTo>Incident_Party__c</referenceTo>
        <relationshipLabel>Disciplinary Actions</relationshipLabel>
        <relationshipName>Disciplinary_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Length_Units__c</fullName>
        <description>used in combination with discipline length</description>
        <label>Length Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Minutes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of action being taken</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In School Suspension</fullName>
                </value>
                <value>
                    <fullName>Out of School Suspension</fullName>
                </value>
                <value>
                    <fullName>Detention</fullName>
                </value>
                <value>
                    <fullName>Community Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Disciplinary Action</label>
    <nameField>
        <displayFormat>DIA-{0000}</displayFormat>
        <label>Disciplinary Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disciplinary Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>